<resources>
    <string name="app_name">IjuxAlarm</string>
    <string name="ijux">IJUX</string>
    <string name="alarm">ALARM</string>
    <string name="correo_electronico">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="o_si_lo_prefieres">O SI LO PREFIERES</string>
    <string name="ingresar_con_tu_huella">INGRESAR CON TU HUELLA</string>
    <string name="registro">REGISTRO</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_contrasena">Ingrese su Contraseña</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="confirme_su_contrasena">Confirme su Contraseña</string>
    <string name="generar_biometrico">GENERAR BIOMÉTRICO</string>
    <string name="guardar">GUARDAR</string>
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="pulsa_aceptar_para_volver_al_inicio">Pulsa aceptar para volver al inicio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="alarmas">ALARMAS</string>
    <string name="crear_alarma_de_tratamiento">Crear alarma de tratamiento</string>
    <string name="crear_alarma">Crear alarma</string>
    <string name="de_tratamiento">de tratamiento</string>
    <string name="crear_alarma_de_reunion">Crear alarma de reunión</string>
    <string name="de_reunion">de reunión</string>
    <string name="crear_alarma_de_sueno">Crear alarma de sueño</string>
    <string name="de_sueno">de sueño</string>
    <string name="no_tienes_ninguna">No tienes ninguna</string>
    <string name="alarma">alarma</string>
    <string name="titulo_nueva_alarma">NUEVA ALARMA</string>
    <string name="label_nombre_tratamiento">Nombre del tratamiento</string>
    <string name="label_cantidad">Cantidad</string>
    <string name="label_fecha_inicio">Fecha de Inicio</string>
    <string name="tratamiento_dolex">Tratamiento - Dolex</string>
    <string name="_7_00_am">7:00 AM</string>
    <string name="reunion_capacitacion_odoo">Reunión - Capacitación Odoo</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="sueno_gimnasio">Sueño - Gimnasio</string>
    <string name="_7_40_am">7:40 AM</string>
    <string name="sueno_natacion">Sueño - Natación</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="volver">Volver</string>
    <string name="label_fecha_final">Fecha Final</string>
    <string name="label_hora_de_inicio">Hora de inicio</string>
    <string name="label_hora_fin">Hora Fin</string>
    <string name="label_unidad_de_medida">Unidad de medida</string>
    <string name="dosificacion">Dosificación</string>
    <string name="label_recordar_cada">Recordar Cada</string>
    <string name="label_selecciona_el_tono">Tono</string>
    <string name="label_vibrar">Vibrar</string>
    <string name="label_nombre_de_la_reunion">Nombre de la Reunión</string>
    <string name="label_duracion_en_minutos">Duración en minutos</string>
    <string name="label_repetir">Repetir</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_nombre">Nombre</string>

</resources>