<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButtonLogOut"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@null"
        android:contentDescription="@string/cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_logout_40" />

    <TextView
        android:id="@+id/textViewListAlarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/alarmas"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewListAlarms"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewNoAlarms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/no_tienes_ninguna"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewNoAlarms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/alarma"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutHeart"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageViewHeart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/crear_alarma_de_tratamiento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/outline_heart_plus_40" />

            <TextView
                android:id="@+id/textViewHeart1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/crear_alarma"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHeart"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textViewHeart2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/de_tratamiento"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHeart1"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutGruup"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/LinearLayoutHeart"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageViewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/crear_alarma_de_reunion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/outline_groups_40" />

            <TextView
                android:id="@+id/textViewGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/crear_alarma"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewGroup"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textViewGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/de_reunion"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGroup1"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/LinearLayoutGruup"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageViewSun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/crear_alarma_de_sueno"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/outline_sunny_40" />

            <TextView
                android:id="@+id/textViewSun1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/crear_alarma"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewSun"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textViewSun2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/de_sueno"
                android:textColor="@color/purple"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSun1"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>