<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateMeetingAlarmActivity">

        <ImageButton
            android:id="@+id/imageButtonBackCreateMeeting"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@null"
            android:contentDescription="@string/volver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/outline_arrow_back_40" />

        <ImageButton
            android:id="@+id/imageButtonLogOutCreateMeeting"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@null"
            android:contentDescription="@string/cerrar_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/outline_logout_40" />

        <TextView
            android:id="@+id/textViewNewAlarmMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/titulo_nueva_alarma"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNewAlarmMeeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/de_reunion"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewAlarmMeeting" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMeetingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_nombre_de_la_reunion"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNewAlarmMeeting2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMeetingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStartDateMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_fecha_inicio"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:endIconDrawable="@drawable/outline_calendar_today_24"
            app:endIconMode="custom"
            app:endIconTint="@color/purple"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMeetingName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextStartDateMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStartHourMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_hora_de_inicio"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:endIconDrawable="@drawable/outline_schedule_24"
            app:endIconMode="custom"
            app:endIconTint="@color/purple"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutStartDateMeeting">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextStartHourMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDurationMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_duracion_en_minutos"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutStartHourMeeting">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDurationMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRepeatMeeting"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_repetir"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:endIconTint="@color/purple"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDurationMeeting">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextViewRepeatMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSoundMeeting"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_selecciona_el_tono"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:endIconTint="@color/purple"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRepeatMeeting">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextViewSoundMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchVibrarMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/label_vibrar"
            android:textColor="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSoundMeeting"
            app:thumbTint="@color/switch_thumb_color"
            app:trackDecorationTint="@color/purple"
            app:trackTint="@color/switch_track_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMeetingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/label_descripcion"
            android:textColorHighlight="@color/purple"
            android:textColorHint="@color/purple"
            app:boxStrokeColor="@color/text_input_border"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchVibrarMeeting">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMeetingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveAlarmMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:text="@string/guardar"
            android:textColor="@color/white"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMeetingDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>